Stats Section Responsive

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </header>
     <!-- Banner Section -->
-    <section class="px-5">
+    <section class="px-5 mb-10 lg:mb-0">
         <div class="hero bg-no-repeat rounded-3xl max-w-7xl mx-auto" style="background-image: url(./Assets/Images/banner.png);">
             <img class="invisible w-full" src="./Assets/Images/banner.png" alt="">
   <div class="hero-content max-w-screen-md 2xl:max-w-5xl text-neutral-content text-center">
@@ -90,28 +90,28 @@
 </div>
     </section>
     <!-- Stats Section -->
-    <section class="px-5 max-w-7xl mx-auto flex justify-center gap-5 -mt-14 font-inter">
-      <div class="stats border-b-4 border-main-color">
-        <div class="stat p-7">
-          <div class="stat-figure text-secondary col-start-1">
+    <section class="px-5 max-w-7xl mx-auto flex justify-center gap-5 lg:-mt-14 font-inter flex-col lg:flex-row items-center">
+      <div class="stats border-b-4 border-main-color max-w-72 w-full shadow-sm">
+        <div class="stat p-7 gri">
+          <div class="stat-figure text-secondary col-start-1 row-span-2 place-self-start justify-self-start">
             <img src="./Assets/Icons/people.png" alt="Registered Users" srcset="">
           </div>
           <div class="stat-value col-start-2">500K+</div>
           <div class="stat-title col-start-2">Registered Users</div>
         </div>
       </div>
-      <div class="stats border-b-4 border-main-color">
+      <div class="stats border-b-4 border-main-color max-w-72 w-full shadow-sm">
         <div class="stat p-7">
-          <div class="stat-figure text-secondary col-start-1">
+          <div class="stat-figure text-secondary col-start-1 row-span-2 place-self-start justify-self-start">
             <img src="./Assets/Icons/ticket-cupon.png" alt="Registered Users" srcset="">
           </div>
           <div class="stat-value col-start-2">1.7 Lacks</div>
           <div class="stat-title col-start-2">Tickets sold</div>
         </div>
       </div>
-      <div class="stats border-b-4 border-main-color">
+      <div class="stats border-b-4 border-main-color max-w-72 w-full shadow-sm">
         <div class="stat p-7">
-          <div class="stat-figure text-secondary col-start-1">
+          <div class="stat-figure text-secondary col-start-1 row-span-2 place-self-start justify-self-start">
             <img src="./Assets/Icons/stoppage.png" alt="Registered Users" srcset="">
           </div>
           <div class="stat-value col-start-2">80K+</div>
@@ -119,6 +119,9 @@
         </div>
       </div>
     </section>
+
+<!-- Coupon Section -->
+
     <section class="px-5 mb-24">
       <div class="max-w-7xl mx-auto">
       <h2 class="text-center font-bold text-4xl mt-24 mb-16">Best offers for you</h2>
@@ -159,7 +162,9 @@
       <div class="text-center"><button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg btn-outline border-main-color text-main-color hover:bg-main-color hover:border-main-color">See All Offers</button></div>
       </div>
     </section>
-    <!-- Ticketing Section -->
+
+<!-- Ticketing Section -->
+
     <section class="rounded-t-3xl bg-grey-color py-24 border-t-4 border-main-color">
       <div class="max-w-7xl mx-auto">
       <h2 class="text-center font-bold text-4xl mb-10">Expedition Bliss</h2>
@@ -302,6 +307,9 @@
       </div>
     </div>
     </section>
+
+<!-- Footer Section -->
+
     <footer class="bg-black text-white px-5 py-24">
       <div class="max-w-7xl mx-auto flex items-center lg:justify-between flex-col lg:flex-row">
         <div class="mb-6 lg:mb-0">
