--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <img class="invisible w-full" src="./Assets/Images/banner.png" alt="">
   <div class="hero-content max-w-screen-md 2xl:max-w-5xl text-neutral-content text-center">
     <div class="">
-      <h1 class="mb-5 text-3xl md:text-5xl lg:text-6xl font-extrabold text-white">End-to-End Travel with <span class="text-main-color">Expedition Bliss</span></h1>
-      <p class="mb-5 text-xs md:text-base lg:text-lg max-w-2xl mx-auto">
+      <h1 class="mb-5 text-3xl sm:text-5xl lg:text-6xl font-extrabold text-white">End-to-End Travel with <span class="text-main-color">Expedition Bliss</span></h1>
+      <p class="mb-5 text-xs md:text-base lg:text-lg max-w-2xl mx-auto hidden md:block">
         Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .
       </p>
       <button class="btn bg-main-color text-black border-0 h-auto min-h-7 md:min-h-10 px-2 md:px-3 lg:px-4 lg:min-h-12 text-xs md:text-lg lg:text-xl font-bold hover:bg-black hover:text-main-color">Buy Tickets</button>
@@ -90,32 +90,57 @@
 </div>
     </section>
     <!-- Stats Section -->
-    <section class="px-5 max-w-7xl mx-auto flex justify-center gap-5 lg:-mt-14 font-inter flex-col lg:flex-row items-center">
-      <div class="stats border-b-4 border-main-color max-w-72 w-full shadow-sm">
-        <div class="stat p-7 gri">
+    <!-- <section class="px-5 max-w-7xl mx-auto flex justify-center gap-5 lg:-mt-14 font-inter lg:flex-row items-center">
+      <div class="stats border lg:border-0 border-b-4 border-main-color max-w-48 lg:max-w-72 w-full shadow-sm">
+        <div class="stat p-4 lg:p-7 items-center">
           <div class="stat-figure text-secondary col-start-1 row-span-2 place-self-start justify-self-start">
             <img src="./Assets/Icons/people.png" alt="Registered Users" srcset="">
           </div>
-          <div class="stat-value col-start-2">500K+</div>
-          <div class="stat-title col-start-2">Registered Users</div>
+          <div class="stat-value col-start-2 text-base leading-none">500K+</div>
+          <div class="stat-title col-start-2 text-xs">Registered Users</div>
         </div>
       </div>
-      <div class="stats border-b-4 border-main-color max-w-72 w-full shadow-sm">
-        <div class="stat p-7">
+      <div class="stats border lg:border-0 border-b-4 border-main-color max-w-48 lg:max-w-72 w-full shadow-sm">
+        <div class="stat p-4 lg:p-7 items-center">
           <div class="stat-figure text-secondary col-start-1 row-span-2 place-self-start justify-self-start">
             <img src="./Assets/Icons/ticket-cupon.png" alt="Registered Users" srcset="">
           </div>
-          <div class="stat-value col-start-2">1.7 Lacks</div>
-          <div class="stat-title col-start-2">Tickets sold</div>
+          <div class="stat-value col-start-2 text-base leading-none">1.7 Lacks</div>
+          <div class="stat-title col-start-2 text-xs">Tickets sold</div>
         </div>
       </div>
-      <div class="stats border-b-4 border-main-color max-w-72 w-full shadow-sm">
-        <div class="stat p-7">
+      <div class="stats border lg:border-0 border-b-4 border-main-color max-w-48 lg:max-w-72 w-full shadow-sm">
+        <div class="stat p-4 lg:p-7 items-center">
           <div class="stat-figure text-secondary col-start-1 row-span-2 place-self-start justify-self-start">
             <img src="./Assets/Icons/stoppage.png" alt="Registered Users" srcset="">
           </div>
-          <div class="stat-value col-start-2">80K+</div>
-          <div class="stat-title col-start-2">Rental partners</div>
+          <div class="stat-value col-start-2 text-base leading-none">80K+</div>
+          <div class="stat-title col-start-2 text-xs">Rental partners</div>
+        </div>
+      </div>
+    </section> -->
+    <section class="lg:-mt-12 sm:-mt-20">
+      <div class="px-5 max-w-7xl mx-auto flex justify-center gap-4 flex-col sm:flex-row">
+        <div class="flex lg:max-w-60 w-full border-b-4 border-main-color bg-white p-3 rounded-2xl gap-2 items-center md:max-w-48 sm:max-w-44">
+          <img class="h-auto w-full max-w-12" src="./Assets/Icons/people.png" alt="Registered Users" srcset="">
+          <div>
+            <div class="lg:text-4xl font-bold font-inter text-4xl md:text-2xl sm:text-xl">500K+</div>
+            <div class="sm:text-xs lg:text-base text-base">Registered Users</div>
+          </div>
+        </div>
+        <div class="flex lg:max-w-60 w-full border-b-4 border-main-color bg-white p-3 rounded-2xl gap-2 items-center md:max-w-48 sm:max-w-44">
+          <img class="h-auto w-full max-w-12" src="./Assets/Icons/ticket-cupon.png" alt="Sold Tickets" srcset="">
+          <div>
+            <div class="lg:text-4xl font-bold font-inter text-4xl md:text-2xl sm:text-xl">1.7 Lacks</div>
+            <div class="sm:text-xs lg:text-base text-base">Tickets Sold</div>
+          </div>
+        </div>
+        <div class="flex lg:max-w-60 w-full border-b-4 border-main-color bg-white p-3 rounded-2xl gap-2 items-center md:max-w-48 sm:max-w-44">
+          <img class="h-auto w-full max-w-12" src="./Assets/Icons/stoppage.png" alt="Bus Companies" srcset="">
+          <div>
+            <div class="lg:text-4xl font-bold font-inter text-4xl md:text-2xl sm:text-xl">80K+</div>
+            <div class="sm:text-xs lg:text-base text-base">Rental Partners</div>
+          </div>
         </div>
       </div>
     </section>
@@ -323,8 +348,8 @@
       </div>
       <hr class="max-w-7xl mx-auto border-0 border-b-2 border-dashed border-gray-400 my-10">
       <div class="max-w-7xl mx-auto flex lg:justify-between font-inter flex-col lg:flex-row items-center">
-        <p class="text-gray-400 text-center lg:text-left">© all rights reserved, Expedition Bliss services limited.2024</p>
-        <div>
+        <p class="text-gray-400 text-center lg:text-left order-2">© all rights reserved, Expedition Bliss services limited.2024</p>
+        <div class="text-center sm:text-right order-1 mb-5 lg:mb-0 lg:order-2">
           <a href="#" class="mr-5">Terms & Condition</a>
           <a href="#" class="mr-5">Return & Refund Policy</a>
           <a href="#">Privacy Policy</a>
