--- a/index.html
+++ b/index.html
@@ -89,36 +89,9 @@
   </div>
 </div>
     </section>
+    
     <!-- Stats Section -->
-    <!-- <section class="px-5 max-w-7xl mx-auto flex justify-center gap-5 lg:-mt-14 font-inter lg:flex-row items-center">
-      <div class="stats border lg:border-0 border-b-4 border-main-color max-w-48 lg:max-w-72 w-full shadow-sm">
-        <div class="stat p-4 lg:p-7 items-center">
-          <div class="stat-figure text-secondary col-start-1 row-span-2 place-self-start justify-self-start">
-            <img src="./Assets/Icons/people.png" alt="Registered Users" srcset="">
-          </div>
-          <div class="stat-value col-start-2 text-base leading-none">500K+</div>
-          <div class="stat-title col-start-2 text-xs">Registered Users</div>
-        </div>
-      </div>
-      <div class="stats border lg:border-0 border-b-4 border-main-color max-w-48 lg:max-w-72 w-full shadow-sm">
-        <div class="stat p-4 lg:p-7 items-center">
-          <div class="stat-figure text-secondary col-start-1 row-span-2 place-self-start justify-self-start">
-            <img src="./Assets/Icons/ticket-cupon.png" alt="Registered Users" srcset="">
-          </div>
-          <div class="stat-value col-start-2 text-base leading-none">1.7 Lacks</div>
-          <div class="stat-title col-start-2 text-xs">Tickets sold</div>
-        </div>
-      </div>
-      <div class="stats border lg:border-0 border-b-4 border-main-color max-w-48 lg:max-w-72 w-full shadow-sm">
-        <div class="stat p-4 lg:p-7 items-center">
-          <div class="stat-figure text-secondary col-start-1 row-span-2 place-self-start justify-self-start">
-            <img src="./Assets/Icons/stoppage.png" alt="Registered Users" srcset="">
-          </div>
-          <div class="stat-value col-start-2 text-base leading-none">80K+</div>
-          <div class="stat-title col-start-2 text-xs">Rental partners</div>
-        </div>
-      </div>
-    </section> -->
+    
     <section class="lg:-mt-12 sm:-mt-20">
       <div class="px-5 max-w-7xl mx-auto flex justify-center gap-4 flex-col sm:flex-row">
         <div class="flex lg:max-w-60 w-full border-b-4 border-main-color bg-white p-3 rounded-2xl gap-2 items-center md:max-w-48 sm:max-w-44">
@@ -151,35 +124,35 @@
       <div class="max-w-7xl mx-auto">
       <h2 class="text-center font-bold text-4xl mt-24 mb-16">Best offers for you</h2>
       <div class="flex gap-10 justify-between mb-16 flex-col lg:flex-row">
-        <div class="bg-orange-color flex w-full rounded-3xl justify-between">
+        <div class="bg-orange-color flex w-full rounded-3xl justify-between px-3 sm:px-0">
           <div class="stats bg-transparent grow">
             <div class="stat flex flex-col justify-center font-inter mx-auto max-w-52 px-0">
-              <div class="stat-value text-3xl xl:text-4xl font-extrabold">15% OFF</div>
-              <div class="stat-title text-black text-xl font-semibold">on your next purchase</div>
-              <div class="stat-desc text-lg font-semibold">use by January 2024</div>
+              <div class="stat-value text-2xl sm:text-3xl xl:text-4xl font-extrabold">15% OFF</div>
+              <div class="stat-title text-black text-base sm:text-xl font-semibold">on your next purchase</div>
+              <div class="stat-desc text-base sm:text-lg font-semibold">use by January 2024</div>
             </div>
           </div>
           <img src="./Assets/Images/cupon-devider.png" alt="">
           <div class="stats bg-transparent grow">
             <div class="stat flex flex-col justify-center text-center p-0">              
-              <div class="stat-value font-bold text-3xl">NEW15</div>
-              <div class="stat-title text-lg">Coupon Code</div>
+              <div class="stat-value font-bold text-xl sm:text-3xl">NEW15</div>
+              <div class="stat-title text-base sm:text-lg">Coupon Code</div>
             </div>
           </div>
       </div>
-        <div class="bg-pink-color flex w-full rounded-3xl justify-between">
+        <div class="bg-pink-color flex w-full rounded-3xl justify-between px-3 sm:px-0">
           <div class="stats bg-transparent grow">
             <div class="stat flex flex-col justify-center font-inter mx-auto max-w-52 px-0">
-              <div class="stat-value text-4xl font-extrabold">20% OFF</div>
-              <div class="stat-title text-black text-xl font-semibold">on your next purchase</div>
-              <div class="stat-desc text-lg font-semibold">use by January 2024</div>
+              <div class="stat-value text-2xl sm:text-3xl xl:text-4xl font-extrabold">20% OFF</div>
+              <div class="stat-title text-black text-base sm:text-xl font-semibold">on your next purchase</div>
+              <div class="stat-desc text-base sm:text-lg font-semibold">use by January 2024</div>
             </div>
           </div>
           <img src="./Assets/Images/cupon-devider.png" alt="">
           <div class="stats bg-transparent grow">
             <div class="stat flex flex-col justify-center text-center p-0">              
-              <div class="stat-value font-bold text-3xl">Couple 20</div>
-              <div class="stat-title text-lg">Coupon Code</div>
+              <div class="stat-value font-bold text-xl sm:text-3xl">Couple 20</div>
+              <div class="stat-title text-base sm:text-lg">Coupon Code</div>
             </div>
           </div>
       </div>
