Ticketing Section Half Responsive 2

--- a/index.html
+++ b/index.html
@@ -188,14 +188,14 @@
             <div class="flex justify-between border-dashed border-b-2 py-4 md:py-8 text-sm">
               <i class="fa-solid fa-traffic-light block sm:hidden"></i><span class="hidden sm:block">Departure Time</span><span>9:00 PM</span>
             </div>
-            <div class="flex justify-between gap-2 sm:gap-3 pt-4 md:pt-8 overflow-x-scroll">
+            <div class="flex justify-between gap-2 sm:gap-3 pt-4 md:pt-8 overflow-x-scroll sm:overflow-visible">
               <button class="btn grow bg-transparent sm:bg-gray-300 text-sm px-0 sm:px-2 shadow-none border-0"><i class="fa-solid fa-bus-simple block lg:hidden"></i> <span class="hidden lg:block">Boarding Point -</span> Laxmipur</button>
               <button class="btn grow bg-transparent sm:bg-gray-300 text-sm px-0 sm:px-2 shadow-none border-0"><i class="fa-solid fa-location-dot block lg:hidden"></i> <span class="hidden lg:block">Dropping Point -</span> Bogura</button>
               <button class="btn grow bg-transparent sm:bg-gray-300 text-sm px-0 sm:px-2 shadow-none border-0"><i class="fa-solid fa-clock block lg:hidden"></i> <span class="hidden lg:block">Est. Time -</span> 11 Hour</button>
             </div>
           </div>
         </div>
-        <img src="./Assets/Images/info-devider.png" alt="ticket" srcset="">
+        <img class="h-72 sm:h-auto" src="./Assets/Images/info-devider.png" alt="ticket" srcset="">
         <div class="text-center place-items-center flex flex-col justify-center px-3 sm:px-6 md:px-12">
           <img src="./Assets/Icons/fare.png" alt="Fare" srcset="">
           <h3 class="font-bold text-sm sm:text-lg lg:text-2xl">550 Taka</h3>
