--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <img class="invisible w-full" src="./Assets/Images/banner.png" alt="">
   <div class="hero-content max-w-screen-md 2xl:max-w-5xl text-neutral-content text-center">
     <div class="">
-      <h1 class="mb-5 text-3xl sm:text-5xl lg:text-6xl font-extrabold text-white">End-to-End Travel with <span class="text-main-color">Expedition Bliss</span></h1>
+      <h1 class="mb-5 text-2xl sm:text-5xl lg:text-6xl font-extrabold text-white">End-to-End Travel with <span class="text-main-color">Expedition Bliss</span></h1>
       <p class="mb-5 text-xs md:text-base lg:text-lg max-w-2xl mx-auto hidden md:block">
         Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .
       </p>
@@ -123,7 +123,7 @@
 
     <section class="px-5 mb-24">
       <div class="max-w-7xl mx-auto">
-      <h2 class="text-center font-bold text-4xl mt-24 mb-16">Best offers for you</h2>
+      <h2 class="text-center font-bold text-2xl sm:text-4xl mt-24 mb-16">Best offers for you</h2>
       <div class="flex gap-10 justify-between mb-16 flex-col lg:flex-row">
         <div class="bg-orange-color flex w-full rounded-3xl justify-between px-3 sm:px-0">
           <div class="stats bg-transparent grow">
@@ -133,7 +133,7 @@
               <div class="stat-desc text-base sm:text-lg font-semibold">use by January 2024</div>
             </div>
           </div>
-          <img src="./Assets/Images/cupon-devider.png" alt="">
+          <img class="h-36 sm:h-auto" src="./Assets/Images/cupon-devider.png" alt="">
           <div class="stats bg-transparent grow">
             <div class="stat flex flex-col justify-center text-center p-0">              
               <div class="stat-value font-bold text-xl sm:text-3xl">NEW15</div>
@@ -149,7 +149,7 @@
               <div class="stat-desc text-base sm:text-lg font-semibold">use by January 2024</div>
             </div>
           </div>
-          <img src="./Assets/Images/cupon-devider.png" alt="">
+          <img class="h-36 sm:h-auto" src="./Assets/Images/cupon-devider.png" alt="">
           <div class="stats bg-transparent grow">
             <div class="stat flex flex-col justify-center text-center p-0">              
               <div class="stat-value font-bold text-xl sm:text-3xl">Couple 20</div>
@@ -164,10 +164,10 @@
 
 <!-- Ticketing Section -->
 
-    <section class="rounded-t-3xl bg-grey-color px-5 py-24 border-t-4 border-main-color">
+    <section class="rounded-t-3xl bg-grey-color px-5 py-10 sm:py-24 border-t-4 border-main-color">
       <div class="max-w-7xl mx-auto">
-      <h2 class="text-center font-bold text-4xl mb-10">Expedition Bliss</h2>
-      <p class="font-inter text-center mb-10 text-slate-500 max-w-2xl mx-auto">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined.</p>
+      <h2 class="text-center font-bold text-2xl sm:text-4xl mb-5 sm:mb-10">Expedition Bliss</h2>
+      <p class="font-inter text-xs sm:text-base text-center mb-10 text-slate-500 max-w-2xl mx-auto">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined.</p>
       <div class="bg-white rounded-3xl flex justify-between mb-8 items-center">
         <div class="p-4 md:p-8 grow">
           <div class="flex justify-between mb-4 md:mb-8 items-center">
@@ -175,7 +175,7 @@
               <img class="hidden sm:block" src="./Assets/Icons/bus-logo.png" alt="Bus" srcset="">
               <div>
                 <h3 class="font-bold text-base sm:text-lg lg:text-2xl">Greenline Travels</h3>
-                <p class="font-inter text-xs hidden sm:block lg:text-sm">Coach-008-XDA | AC_Luxury</p>
+                <p class="font-inter text-xs block lg:text-sm">Coach-008-XDA | AC_Luxury</p>
               </div>
             </div>
             <button class="btn font-inter text-main-color bg-light-color border-0 hover:bg-light-color">
@@ -189,33 +189,39 @@
               <i class="fa-solid fa-traffic-light block sm:hidden"></i><span class="hidden sm:block">Departure Time</span><span>9:00 PM</span>
             </div>
             <div class="flex justify-between gap-2 sm:gap-3 pt-4 md:pt-8 overflow-x-scroll sm:overflow-visible">
-              <button class="btn grow bg-transparent sm:bg-gray-300 text-sm px-0 sm:px-2 shadow-none border-0"><i class="fa-solid fa-bus-simple block lg:hidden"></i> <span class="hidden lg:block">Boarding Point -</span> Laxmipur</button>
-              <button class="btn grow bg-transparent sm:bg-gray-300 text-sm px-0 sm:px-2 shadow-none border-0"><i class="fa-solid fa-location-dot block lg:hidden"></i> <span class="hidden lg:block">Dropping Point -</span> Bogura</button>
-              <button class="btn grow bg-transparent sm:bg-gray-300 text-sm px-0 sm:px-2 shadow-none border-0"><i class="fa-solid fa-clock block lg:hidden"></i> <span class="hidden lg:block">Est. Time -</span> 11 Hour</button>
+              <button class="btn grow bg-gray-300 text-sm px-0 sm:px-2 shadow-none border-0"><i class="fa-solid fa-bus-simple block lg:hidden"></i> <span class="hidden lg:block">Boarding Point -</span> Laxmipur</button>
+              <button class="btn grow bg-gray-300 text-sm px-0 sm:px-2 shadow-none border-0"><i class="fa-solid fa-location-dot block lg:hidden"></i> <span class="hidden lg:block">Dropping Point -</span> Bogura</button>
+              <button class="btn grow bg-gray-300 text-sm px-0 sm:px-2 shadow-none border-0"><i class="fa-solid fa-clock block lg:hidden"></i> <span class="hidden lg:block">Est. Time -</span> 11 Hour</button>
             </div>
           </div>
         </div>
-        <img class="h-72 sm:h-auto" src="./Assets/Images/info-devider.png" alt="ticket" srcset="">
-        <div class="text-center place-items-center flex flex-col justify-center px-3 sm:px-6 md:px-12">
+        <img class="hidden sm:block sm:h-72 md:h-auto" src="./Assets/Images/info-devider.png" alt="ticket" srcset="">
+        <div class="hidden text-center place-items-center sm:flex flex-col justify-center px-3 sm:px-6 md:px-12">
           <img src="./Assets/Icons/fare.png" alt="Fare" srcset="">
           <h3 class="font-bold text-sm sm:text-lg lg:text-2xl">550 Taka</h3>
           <p class="font-bold text-xs sm:text-sm md:text-lg text-gray-500">Per Seat</p>
         </div>
       </div>
-      <div class="bg-white rounded-3xl flex justify-between p-8">
-        <div class="grow">
+
+      <!-- Seat Selection Section Begins -->
+
+      <div class="bg-white rounded-3xl grid grid-cols-1 sm:grid-cols-2 auto-cols-max justify-between p-5 md:p-8">
+        <div class="sm:pe-5 md:pe-8 sm:me-5 md:me-8 sm:border-r-2 sm:border-dashed mb-5 sm:mb-0">
           <div class="flex flex-col gap-y-5 mb-8">
-            <h4 class="text-xl font-bold">Select Your Seat</h4>
+            <h4 class="text-xl font-bold text-center sm:text-left">Select Your Seat</h4>
             <hr class="border-0 border-b-2 border-dashed">
             <div class="flex justify-between text-lg">
-              <div class="flex items-center font-inter">
-                <img src="./Assets/Icons/seat-black.png" alt="seat" srcset="">Available
+              <div class="flex items-center font-inter flex-col lg:flex-row">
+                <img src="./Assets/Icons/seat-black.png" alt="seat" srcset="">
+                <span class="text-xs md:text-base lg:text-lg">Available</span>
               </div>
-              <div class="flex items-center font-inter text-zinc-500">
-                <img src="./Assets/Icons/seat-gray.png" alt="seat" srcset="">Booked
+              <div class="flex items-center font-inter text-zinc-500 flex-col lg:flex-row">
+                <img src="./Assets/Icons/seat-gray.png" alt="seat" srcset="">
+                <span class="text-xs md:text-base lg:text-lg">Booked</span>
               </div>
-              <div class="flex items-center font-inter text-main-color">
-                <img src="./Assets/Icons/seat-green-filled.png" alt="seat" srcset="">Selected
+              <div class="flex items-center font-inter text-main-color flex-col lg:flex-row">
+                <img src="./Assets/Icons/seat-green-filled.png" alt="seat" srcset="">
+                <span class="text-xs md:text-base lg:text-lg">Selected</span>
               </div>
             </div>
             <hr class="border-0 border-b-2 border-dashed">
@@ -223,33 +229,33 @@
 
 <!-- Seats HTML Buttons Here -->
 
-          <div class="flex gap-12">
+          <div class="flex gap-6 lg:gap-12">
             <div class="flex grow">
-              <div id="serial" class="grid items-center mr-8 justify-items-center gap-7 grid-rows-11">
+              <div id="serial" class="hidden lg:grid items-center mr-8 justify-items-center gap-7 grid-rows-11">
                 <div></div>
               </div>
-              <div id="firstCol" class="grid grid-cols-2 grow gap-7 grid-rows-11">
+              <div id="firstCol" class="grid grid-cols-2 grow gap-3 lg:gap-7 grid-rows-11 justify-items-stretch">
                 <div disabled></div>
                 <div disabled></div>
               </div>
             </div>
-            <div id="secondCol" class="grid grid-cols-2 grow gap-7 grid-rows-11">
+            <div id="secondCol" class="grid grid-cols-2 grow gap-3 lg:gap-7 grid-rows-11 justify-items-stretch">
               <button class="btn col-start-2" disabled><img src="./Assets/Icons/steering.svg" alt=""></button>
             </div>
           </div>
         </div>
-        <div class="divider divider-horizontal before:border-r-2 before:border-gray-300 before:border-dashed before:bg-transparent after:border-r-2 after:border-gray-300 after:border-dashed after:bg-transparent m-0 w-0 px-8"></div>
-        <div class="grow">
-          <h4 class="mb-5 text-xl font-bold">Select Your Seat</h4>
+<!-- Second Column -->
+        <div class="col-start-1 sm:col-start-2">
+          <h4 class="mb-5 text-xl font-bold text-center sm:text-left">Seat Info</h4>
           <hr class="border-0 border-b-2 border-dashed">
 <!-- Billing Side -->
-          <div class="bg-grey-color p-8 rounded-2xl my-8">
+          <div class="bg-grey-color p-5 md:p-8 rounded-2xl my-5 md:my-8">
             <div class="overflow-x-auto">
               <table class="table border-b-2 border-b-gray-300 mb-3 font-inter rounded-none">
                 <!-- head -->
                 <thead  class="border-dashed border-b-2 border-b-gray-300">
-                  <tr class="text-base">
-                    <th class="pl-0 pt-0 text-black">Seat <div class="badge bg-main-color text-white" id="selectCount">0</div></th>
+                  <tr class="text-xs md:text-base">
+                    <th class="pl-0 pt-0 text-black">Seat <div class="badge bg-main-color text-xs sm:text-base text-white" id="selectCount">0</div></th>
                     <th class="pl-0 pt-0 text-black">Class</th>
                     <th class="pr-0 pt-0 text-black text-right">Price</th>
                   </tr>
@@ -272,33 +278,33 @@
                 </svg>
                 <span class="font-inter">You can select up to 4 seats only!</span>
               </div>
-              <div class="flex justify-between font-inter mb-3 font-bold">
+              <div class="text-xs md:text-base flex justify-between font-inter mb-3 font-bold">
                 <span>Total Price</span>
                 <span id="totalFare"></span>
               </div>
-              <div class="bg-white relative w-full p-2 rounded-xl mb-3">
-                <input type="text" placeholder="Have any coupon?" class="input input-white w-full max-w-screen-xl focus:outline-none
-                focus:border-0 " id="coupon"/>
-                <button class="btn bg-main-color text-white hover:bg-black border-0 absolute right-2" id="couponApply" disabled>Apply</button>
+              <div class="text-xs md:text-base bg-white relative w-full p-2 rounded-xl mb-3 flex items-center">
+                <input type="text" placeholder="Have any coupon?" class="text-xs md:text-base input input-white w-full max-w-screen-xl focus:outline-none
+                focus:border-0 p-0" id="coupon"/>
+                <button class="btn bg-main-color text-white hover:bg-black border-0 absolute right-2 text-xs md:text-base h-auto min-h-0 p-3" id="couponApply" disabled>Apply</button>
               </div>
               <div id="couponAlert">
               </div>
-              <div class="flex justify-between font-inter font-bold">
+              <div class="text-xs md:text-base flex justify-between font-inter font-bold">
                 <span>Grand Total</span>
                 <span id="grandTotal">BDT 0</span>
               </div>
             </div>
           </div>
           <form class="form-control w-full max-w-full mb-5">
-              <label class="label font-bold pt-0 justify-start" for="pname">Passenger Name <span class="text-red-600">*</span></label>
-            <input type="text" id="pname" placeholder="Enter your name" class="input input-bordered focus:outline-0 w-full max-w-full mb-5" required/>
-              <label class="label font-bold pt-0 justify-start" for="phone">Phone Number <span class="text-red-600">*</span></label>
-            <input type="tel" id="phone" placeholder="Enter your phone number" class="input input-bordered focus:outline-0 w-full max-w-full mb-5" required/>
-              <label class="label font-bold pt-0" for="email">Email ID</label>
-            <input type="email" id="email" placeholder="Enter your email id" class="input input-bordered focus:outline-0 w-full max-w-full mb-6"/>
-            <button class="btn w-full bg-main-color text-white font-bold hover:bg-black" type="button" id="submit" disabled>Next</button>
+              <label class="text-xs md:text-base label font-bold pt-0 justify-start" for="pname">Passenger Name <span class="text-red-600">*</span></label>
+            <input type="text" id="pname" placeholder="Enter your name" class="text-xs md:text-base input input-bordered focus:outline-0 w-full max-w-full mb-5" required/>
+              <label class="text-xs md:text-base label font-bold pt-0 justify-start" for="phone">Phone Number <span class="text-red-600">*</span></label>
+            <input type="tel" id="phone" placeholder="Enter your phone number" class="text-xs md:text-base input input-bordered focus:outline-0 w-full max-w-full mb-5" required/>
+              <label class="text-xs md:text-base label font-bold pt-0" for="email">Email ID</label>
+            <input type="email" id="email" placeholder="Enter your email id" class="text-xs md:text-base input input-bordered focus:outline-0 w-full max-w-full mb-6"/>
+            <button class="text-xs md:text-base btn w-full bg-main-color text-white font-bold hover:bg-black" type="button" id="submit" disabled>Next</button>
           </form>
-          <div class="flex justify-around">
+          <div class="text-xs md:text-base flex justify-around">
             <a class="link link-neutral">Terms and Conditions</a>
             <a class="link link-neutral">Cancellation Policy</a>
           </div>
@@ -306,6 +312,25 @@
       </div>
     </div>
     </section>
+
+<!-- Modal -->
+
+<dialog id="my_modal_1" class="modal">
+  <div class="modal-box">
+    <img class="mx-auto" src="./Assets/Icons/success.png" alt="">
+    <h1 class="text-center text-2xl font-bold py-4 text-main-color">SUCCESS</h1>
+    <h3 class="text-base sm:text-lg font-bold text-center">Thank you for Booking Our Bus Seats. 
+      We are working hard to find the best service and deals for you.</h3>
+    <p class="text-sm sm:text-base py-2 text-center">Shortly you will find a confirmation in your email.</p>
+    <div class="modal-action mt-2 justify-center">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="text-base sm:text-lg btn bg-main-color rounded-full text-white">Continue</button>
+      </form>
+    </div>
+  </div>
+</dialog>
+
 
 <!-- Footer Section -->
 
