Coupon font size responsive done

--- a/index.html
+++ b/index.html
@@ -128,32 +128,32 @@
         <div class="bg-orange-color flex w-full rounded-3xl justify-between px-3 sm:px-0">
           <div class="stats bg-transparent grow">
             <div class="stat flex flex-col justify-center font-inter mx-auto max-w-52 px-0">
-              <div class="stat-value text-2xl sm:text-3xl xl:text-4xl font-extrabold">15% OFF</div>
-              <div class="stat-title text-black text-base sm:text-xl font-semibold">on your next purchase</div>
-              <div class="stat-desc text-base sm:text-lg font-semibold">use by January 2024</div>
+              <div class="stat-value text-xl sm:text-3xl xl:text-4xl font-extrabold">15% OFF</div>
+              <div class="stat-title text-black text-sm sm:text-xl font-semibold">on your next purchase</div>
+              <div class="stat-desc text-sm sm:text-lg font-semibold">use by January 2024</div>
             </div>
           </div>
           <img class="h-36 sm:h-auto" src="./Assets/Images/cupon-devider.png" alt="">
           <div class="stats bg-transparent grow">
             <div class="stat flex flex-col justify-center text-center p-0">              
-              <div class="stat-value font-bold text-xl sm:text-3xl">NEW15</div>
-              <div class="stat-title text-base sm:text-lg">Coupon Code</div>
+              <div class="stat-value font-bold text-lg sm:text-3xl">NEW15</div>
+              <div class="stat-title text-sm sm:text-lg">Coupon Code</div>
             </div>
           </div>
       </div>
         <div class="bg-pink-color flex w-full rounded-3xl justify-between px-3 sm:px-0">
           <div class="stats bg-transparent grow">
             <div class="stat flex flex-col justify-center font-inter mx-auto max-w-52 px-0">
-              <div class="stat-value text-2xl sm:text-3xl xl:text-4xl font-extrabold">20% OFF</div>
-              <div class="stat-title text-black text-base sm:text-xl font-semibold">on your next purchase</div>
-              <div class="stat-desc text-base sm:text-lg font-semibold">use by January 2024</div>
+              <div class="stat-value text-xl sm:text-3xl xl:text-4xl font-extrabold">20% OFF</div>
+              <div class="stat-title text-black text-sm sm:text-xl font-semibold">on your next purchase</div>
+              <div class="stat-desc text-sm sm:text-lg font-semibold">use by January 2024</div>
             </div>
           </div>
           <img class="h-36 sm:h-auto" src="./Assets/Images/cupon-devider.png" alt="">
           <div class="stats bg-transparent grow">
             <div class="stat flex flex-col justify-center text-center p-0">              
-              <div class="stat-value font-bold text-xl sm:text-3xl">Couple 20</div>
-              <div class="stat-title text-base sm:text-lg">Coupon Code</div>
+              <div class="stat-value font-bold text-lg sm:text-3xl">Couple 20</div>
+              <div class="stat-title text-sm sm:text-lg">Coupon Code</div>
             </div>
           </div>
       </div>
