--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
     <!-- Banner Section -->
     <section class="px-5 mb-10 lg:mb-0">
-        <div class="hero bg-no-repeat rounded-3xl max-w-7xl mx-auto" style="background-image: url(./Assets/Images/banner.png);">
+        <div class="hero bg-no-repeat rounded-3xl max-w-7xl mx-auto bg-[url('./Assets/images/banner.png')]">
             <img class="invisible w-full" src="./Assets/Images/banner.png" alt="">
   <div class="hero-content max-w-screen-md 2xl:max-w-5xl text-neutral-content text-center">
     <div class="">
