--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
           </ul>
         </div>
         <div class="navbar-end">
-            <button class="btn bg-light-color text-main-color border-main-color hover:border-black hover:bg-light-color">Bus <img src="https://plabon6.github.io/expeditionbliss/Assets/Images/banner.png" alt="" srcset=""></button>
+            <button class="btn bg-light-color text-main-color border-main-color hover:border-black hover:bg-light-color">Bus <img src="./Assets/Images/banner.png" alt="" srcset=""></button>
         </div>
       </div>
     </header>
     <!-- Banner Section -->
     <section class="px-5 mb-10 lg:mb-0">
-        <div class="hero bg-no-repeat rounded-3xl max-w-7xl mx-auto bg-[url('Assets/images/banner.png')]">
+        <div class="hero bg-no-repeat rounded-3xl max-w-7xl mx-auto bg-[url('https://plabon6.github.io/expeditionbliss/Assets/Images/banner.png')]">
             <img class="invisible w-full" src="./Assets/Images/banner.png" alt="">
   <div class="hero-content max-w-screen-md 2xl:max-w-5xl text-neutral-content text-center">
     <div class="">
