--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </ul>
         </div>
         <div class="navbar-end">
-            <button class="btn bg-light-color text-main-color border-main-color hover:border-black hover:bg-light-color">Bus <img src="./Assets/Images/banner.png" alt="" srcset=""></button>
+            <button class="btn bg-light-color text-main-color border-main-color hover:border-black hover:bg-light-color">Bus <img src="./Assets/Icons/bus-icon.png" alt="Bus Banner"></button>
         </div>
       </div>
     </header>
